fix: theme toggle flashing on safari

--- a/static/style.css
+++ b/static/style.css
@@ -113,6 +113,7 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .sun-and-moon {
